# pegasus

./: .gitignore  .gitmodules  AtlasIDE.py  CMakeLists.txt  MergeInstHandlers.py  README.md
arch/: CMakeLists.txt  RegisterDefnsJSON.cpp  RegisterDefnsJSON.hpp  RegisterSet.hpp  default_csr_values.json  register_macros.hpp  rva23.yaml  rvb23.yaml  rvm23.yaml  supportedISA.hpp
core/: Action.hpp  ActionGroup.cpp  ActionGroup.hpp  ActionTagFactory.hpp  ActionTags.cpp  AtlasAllocatorWrapper.hpp  AtlasExtractor.cpp  AtlasExtractor.hpp  AtlasInst.cpp  AtlasInst.hpp  AtlasRegister.hpp  AtlasState.cpp  AtlasState.hpp  AtlasTranslationState.hpp  CMakeLists.txt  CoSimQuery.hpp  Exception.cpp  Exception.hpp  Execute.cpp  Execute.hpp  Fetch.cpp  Fetch.hpp  FpNums.hpp  InstHandlers.cpp  InstHandlers.hpp  InstSnapshotter.hpp  IntNums.hpp  MessageLogger.hpp  PageTable.hpp  PageTable.tpp  PageTableEntry.hpp  PageTableEntry.tpp  PageTableWalker.cpp  PageTableWalker.hpp  PegasusAllocatorWrapper.hpp  PegasusCore.cpp  PegasusCore.hpp  PegasusExtractor.cpp  PegasusExtractor.hpp  PegasusInst.cpp  (+17 more)
core/STFtrace/: STFLogger.cpp  STFLogger.hpp
core/inst_handlers/: CMakeLists.txt  RvfInstsHelpers.hpp  finst_helpers.hpp  finsts_helpers.hpp  inst_helpers.hpp  softfloat.hpp  vector_types.hpp
core/inst_handlers/a/: CMakeLists.txt  RvaFunctors.hpp  RvaInsts.cpp  RvaInsts.hpp  RvaInstsBase.cpp  RvaInstsBase.hpp  inst_helpers.hpp
core/inst_handlers/b/: CMakeLists.txt  RvbFunctors.hpp  RvbInsts.cpp  RvbInsts.hpp  RvzbInstsBase.hpp  RvzbaInsts.cpp  RvzbaInsts.hpp  RvzbbInsts.cpp  RvzbbInsts.hpp  RvzbcInsts.cpp  RvzbcInsts.hpp  RvzbkbInsts.cpp  RvzbkbInsts.hpp  RvzbsInsts.cpp  RvzbsInsts.hpp
core/inst_handlers/d/: CMakeLists.txt  RvdInsts.cpp  RvdInsts.hpp
core/inst_handlers/f/: CMakeLists.txt  RvfFunctors.hpp  RvfInsts.cpp  RvfInsts.hpp  RvfInstsBase.hpp  inst_helpers.hpp
core/inst_handlers/h/: CMakeLists.txt  RvhInsts.cpp  RvhInsts.hpp
core/inst_handlers/i/: CMakeLists.txt  RviFunctors.hpp  RviInsts.cpp  RviInsts.hpp
core/inst_handlers/m/: CMakeLists.txt  RvmFunctors.hpp  RvmInsts.cpp  RvmInsts.hpp
core/inst_handlers/rv64/: CMakeLists.txt
core/inst_handlers/smrmni/: CMakeLists.txt  RvsmrmiInsts.cpp  RvsmrmiInsts.hpp  RvsmrmniInsts.cpp  RvsmrmniInsts.hpp
core/inst_handlers/svinval/: CMakeLists.txt  RvsvinvalInsts.cpp  RvsvinvalInsts.hpp
core/inst_handlers/v/: CMakeLists.txt  RvvConfigSettingInsts.cpp  RvvConfigSettingInsts.hpp  RvvFixedPointInsts.cpp  RvvFixedPointInsts.hpp  RvvFloatInsts.cpp  RvvFloatInsts.hpp  RvvFloatingInsts.cpp  RvvFloatingInsts.hpp  RvvFunctors.hpp  RvvInsts.cpp  RvvInsts.hpp  RvvIntegerInsts.cpp  RvvIntegerInsts.hpp  RvvLoadStoreInsts.cpp  RvvLoadStoreInsts.hpp  RvvMaskInsts.cpp  RvvMaskInsts.hpp  RvvPermuteInsts.cpp  RvvPermuteInsts.hpp  RvvReductionInsts.cpp  RvvReductionInsts.hpp  RvvZvbbInsts.cpp  RvvZvbbInsts.hpp  RvvZvbcInsts.cpp  RvvcsInsts.cpp  RvvcsInsts.hpp  RvviaInsts.cpp  RvviaInsts.hpp  RvvlsInsts.cpp  RvvlsInsts.hpp  RvvmInsts.cpp  RvvmInsts.hpp
core/inst_handlers/zabha/: CMakeLists.txt  RvzabhaInsts.cpp  RvzabhaInsts.hpp
core/inst_handlers/zacas/: CMakeLists.txt  RvzacasInsts.cpp  RvzacasInsts.hpp
core/inst_handlers/zawrs/: CMakeLists.txt  RvzawrsInsts.cpp  RvzawrsInsts.hpp
core/inst_handlers/zbkb/: CMakeLists.txt  ZbkbInsts.cpp  ZbkbInsts.hpp
core/inst_handlers/zbkx/: CMakeLists.txt  RvzbkxInsts.cpp  RvzbkxInsts.hpp
core/inst_handlers/zcmp/: CMakeLists.txt  RvzcmpInsts.cpp  RvzcmpInsts.hpp
core/inst_handlers/zcmt/: CMakeLists.txt  RvzcmtInsts.cpp  RvzcmtInsts.hpp
core/inst_handlers/zfa/: CMakeLists.txt  RvzfaInsts.cpp  RvzfaInsts.hpp
core/inst_handlers/zfbfmin/: CMakeLists.txt  RvzfbfminInsts.cpp  RvzfbfminInsts.hpp
core/inst_handlers/zfh/: CMakeLists.txt  RvzfhInsts.cpp  RvzfhInsts.hpp
core/inst_handlers/zicbom/: CMakeLists.txt  RvzicbomInsts.cpp  RvzicbomInsts.hpp
core/inst_handlers/zicbop/: CMakeLists.txt  RvzicbopInsts.cpp  RvzicbopInsts.hpp
core/inst_handlers/zicboz/: CMakeLists.txt  RvzicbozInsts.cpp  RvzicbozInsts.hpp
core/inst_handlers/zicfiss/: CMakeLists.txt  RvzicfissInsts.cpp  RvzicfissInsts.hpp
core/inst_handlers/zicond/: CMakeLists.txt  RvzicondInsts.cpp  RvzicondInsts.hpp
core/inst_handlers/zicsr/: CMakeLists.txt  RvcsrAccess.hpp  RvzicsrInsts.cpp  RvzicsrInsts.hpp
core/inst_handlers/zicsrind/: CMakeLists.txt  RvzicsrConstants.hpp  Rvzicsrind.cpp  (+2 more)
core/observers/: CoSimObserver.cpp  CoSimObserver.hpp  InstructionLogger.cpp  InstructionLogger.hpp  Observer.cpp  Observer.hpp  STFLogger.cpp  STFLogger.hpp  STFValidator.cpp  STFValidator.hpp  SimController.cpp  SimController.hpp  SimControllerJSON.cpp
core/translate/: AtlasTranslationState.hpp  PageTable.hpp  PageTableEntry.hpp  PageTableWalker.cpp  PageTableWalker.hpp  PegasusTranslationState.hpp  Translate.cpp  Translate.hpp  TranslateTypes.hpp
cosim/: AtlasCoSim.cpp  AtlasCoSim.hpp  CMakeLists.txt  CoSimApi.hpp  CoSimEventPipeline.cpp  CoSimEventPipeline.hpp  CoSimEventReplayer.cpp  CoSimEventReplayer.hpp  CoSimPipeline.cpp  CoSimPipeline.hpp  Event.hpp  EventAccessor.hpp  MemoryInterface.hpp  PegasusCoSim.cpp  PegasusCoSim.hpp
sim/: Allocators.hpp  AtlasAllocators.hpp  AtlasSim.cpp  AtlasSim.hpp  CMakeLists.txt  PegasusAllocators.hpp  PegasusSim.cpp  PegasusSim.hpp  PegasusSimParameters.hpp  atlas.cpp  pegasus.cpp
test/: AtlasTestingMacros.cmake  CMakeLists.txt  PegasusTestingMacros.cmake
test/actions/: Actions_test.cpp  CMakeLists.txt  TestComponents.hpp
test/core/: CMakeLists.txt
test/cosim/: CMakeLists.txt
test/elfs/: CMakeLists.txt  GNUmakefile  README.md  common.mk
test/logger/: STFLogger_test.cpp
test/register/: CMakeLists.txt  Register_test.cpp  bad_group_reg1.json  bad_group_reg2.json  bad_group_reg3.json  fp_reg.json  int_reg.json  non_power_of_2_count_reg.json  odd_byte_count_reg.json  zero_byte_reg.json
test/sim/: CMakeLists.txt  InstructionTester.hpp
test/stf/: CMakeLists.txt  STF_test.cpp
test/utils/: ByteVector_test.cpp  CMakeLists.txt
test/vector/: CMakeLists.txt
test/zacas/: Amocas_test.cpp  CMakeLists.txt
(+479 files in other folders)
